# MapSelect

./: .gitignore  CITATION.bib  CMakeLists.txt  Readme.md  build.sh
cmake/: MapSelectConfig.cmake
doc/: Doxyfile
mapselect/: demo.cpp  mselect.cpp  setcompare.cpp
mapselect/algorithms/: CostBenefitGreedy.h  GurobiOpt.cpp  GurobiOpt.h  LazyGreedy.h  RandomSet.h  StochasticGreedy.h  WeightSearch.h  WeightedGreedy.h
mapselect/functions/: FrameEstimation.h  FrameFunction.h  FrameLocal.h  FrameOdometry.h  LoopCover.h  LoopProb.h  MatrixFrameFunction.h  SLAMBase.cpp  SLAMBase.h  SLAMCholmod.cpp  SLAMCholmod.h  SLAMInfoCholmod.cpp  SLAMInfoCholmod.h  SLAMInfoDense.cpp  SLAMInfoDense.h  SLAMInfoGTSAM.cpp  SLAMInfoGTSAM.h  SaturatedFunctions.h  SaturatedSetFunction.h  SetCover.h  SetFunction.h  WSearchPair.h  WeightedFunctionPair.h
mapselect/maps/: Alias.h  MapData.h  MapDataAlias.h  OSMapAlias.h  OSMapData.cpp  OSMapData.h  Selection.h
mapselect/slam/: Derivatives.h  SLAMGraph.cpp  SLAMGraph.h  SLAMGraphGTSAM.cpp  SLAMGraphGTSAM.h  SLAMGraphGTSAMSettings.h
mapselect/unsupported/functions/: CoverSat.h  FrameEstimationLegacy.h
mapselect/utils/: BucketQueue.cpp  BucketQueue.h  Disclaimer.h  KeyVectorUtils.h  MatFuncs.h  PathUtils.h  StablePriorityQueue.h  Timing.h  Tolerance.h
